# Project-Duci-Tap-Tap

./: .gitignore  Cargo.toml  Documentation.md  README.md  canister_ids.json  dfx.json  package-lock.json  package.json
src/tap-tap-backend/: Cargo.toml  tap-tap-backend.did
src/tap-tap-backend/src/: lib.rs
src/tap-tap-frontend/: package.json
src/tap-tap-frontend/src/: App.jsx  GetAuth.jsx  GetUser.jsx  MoreGames.jsx  TapTap.jsx  test.jsx
src/tap-tap-frontend/src/styles/: App.css  GetAuth.css  GetUser.css  index.css
