[package]
name = "tap-tap-backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
mio = "1.0"
ic-cdk = "0.17"  # Keep the IC SDK version for interacting with the Internet Computer
ic-cdk-macros = "0.17"  # Ensure this matches the ic-cdk version
candid = "0.10"  # Compatible version for encoding/decoding Candid types
serde = "1.0"  # For serialization/deserialization
serde_cbor = "0.11.2"  # For additional CBOR support
tokio = { version = "1", features = ["full"] }  # For async operations like HTTP requests
reqwest = { version = "0.11", features = ["json"] }  # For making HTTP requests (external to IC)
