[package]
name = "tap-tap-backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"  # For Candid types and compatibility
ic-cdk = "0.16"  # DFINITY's Canister Development Kit
ic-cdk-timers = "0.10"  # Timers (remove if unnecessary)
serde = { version = "1.0", features = ["derive"] }  # For serialization/deserialization
serde_cbor = "0.11"  # For CBOR serialization, if needed
serde_bytes = "0.11"  # For handling byte arrays in serde
